--- a/EnergyControl/EnergyControlMaui/Views/WelcomePage.xaml
+++ b/EnergyControl/EnergyControlMaui/Views/WelcomePage.xaml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:EnergyControlMaui.MarkupExtensions"
-             x:Class="EnergyControlMaui.WelcomePage"
+             x:Class="EnergyControlMaui.Views.WelcomePage"
              NavigationPage.HasNavigationBar="False"
              Background="#24293E">
 
     <ContentPage.Content>
         <Grid>
             <Image Source="bubble.png" HorizontalOptions="Start" Aspect="AspectFit" WidthRequest="300" Margin="0,0,0,100"/>
-            <Image Source="wavydotsright.png" HorizontalOptions="End" VerticalOptions="Start" Aspect="AspectFit" WidthRequest="350" HeightRequest="350" Margin="0,-5,0,0"/>
-            <Image Source="wavydotsleft.png" HorizontalOptions="Start" VerticalOptions="End" Aspect="AspectFit" WidthRequest="350" HeightRequest="350" Margin="-10,0,0,0"/>
-            <Image Source="welcomeman.png" HorizontalOptions="Start" Aspect="AspectFit" WidthRequest="280"/>
+            <Image Source="wavy_dots_right.png" HorizontalOptions="End" VerticalOptions="Start" Aspect="AspectFit" WidthRequest="350" HeightRequest="350" Margin="0,-5,0,0"/>
+            <Image Source="wavy_dots_left.png" HorizontalOptions="Start" VerticalOptions="End" Aspect="AspectFit" WidthRequest="350" HeightRequest="350" Margin="-10,0,0,0"/>
+            <Image Source="welcome_man.png" HorizontalOptions="Start" Aspect="AspectFit" WidthRequest="280"/>
 
             <StackLayout Margin="45">
                 <StackLayout Orientation="Horizontal" Spacing="0" VerticalOptions="Start" HorizontalOptions="Start">
