--- a/EnergyControl/EnergyControlMaui/Views/HomePage.xaml
+++ b/EnergyControl/EnergyControlMaui/Views/HomePage.xaml
@@ -6,10 +6,43 @@
              Background="#24293D">
 
     <ContentPage.Content>
-        <StackLayout>
-            <ImageButton Source="add_device_btn.png" Clicked="AddBtn_Cliked"/>
-        </StackLayout>
+        <Grid>
+            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Start">
+                <Image Source="top_bar_home.png"/>
+            </StackLayout>
+
+            <StackLayout Orientation="Horizontal">
+                <StackLayout Orientation="Horizontal" Margin="45,8,0,0" Spacing="0">
+                    <Label Text="E" TextColor="#F4F4FC" FontSize="32" FontFamily="Inter" FontAttributes="Bold,Italic"/>
+                    <Label Text="C" TextColor="#8EBBFF" FontSize="32" FontFamily="Inter" FontAttributes="Bold,Italic"/>
+                </StackLayout>
+                <StackLayout  Margin="50,15,0,0" HorizontalOptions="Center">
+                    <Label Text="Connection" TextColor="#F4F4FC" FontSize="24" FontFamily="Inter" FontAttributes="Bold"/>
+                </StackLayout>
+            </StackLayout>
+
+            <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
+                <ImageButton Source="add_device_btn.png" Clicked="AddBtn_Cliked">
+                    <VisualStateManager.VisualStateGroups>
+                        <VisualStateGroup>
+                            <VisualState x:Name="Normal">
+                                <VisualState.Setters>
+                                    <Setter Property="Scale" Value="1"/>
+                                </VisualState.Setters>
+                            </VisualState>
+                            <VisualState x:Name="Pressed">
+                                <VisualState.Setters>
+                                    <Setter Property="Scale" Value="0.95"/>
+                                </VisualState.Setters>
+                            </VisualState>
+                        </VisualStateGroup>
+                    </VisualStateManager.VisualStateGroups>
+                </ImageButton>
+            </StackLayout>
+               
+            <StackLayout HorizontalOptions="End" VerticalOptions="End">
+                <Image Source="robot.png"/>
+            </StackLayout>
+        </Grid>
     </ContentPage.Content>
-
-
 </ContentPage>
