--- a/EnergyControl/EnergyControlMaui/Views/LoginPage.xaml
+++ b/EnergyControl/EnergyControlMaui/Views/LoginPage.xaml
@@ -123,7 +123,7 @@
                     <Label Text="Remember me" FontFamily="interlight" FontSize="13" TextColor="#F4F4FC" VerticalOptions="Center" Margin="0,0,68,0"/>
                     <Label Text="Forget password?" FontFamily="interlight" FontSize="13" TextColor="#F4F4FC" VerticalOptions="Center" HorizontalOptions="End" TextDecorations="Underline"/>
                 </StackLayout>
-                
+
                 <StackLayout Margin="0,50,0,0">
                     <Button Text="Authorize"
                         x:Name="AuthorizeButton"
@@ -139,7 +139,23 @@
                         CornerRadius="10"
                         BorderWidth="2"
                         BackgroundColor="#F4F4FC"
-                        BorderColor="#8EBBFF"/>
+                        BorderColor="#8EBBFF">
+                        
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup>
+                                <VisualState x:Name="Normal">
+                                    <VisualState.Setters>
+                                        <Setter Property="Scale" Value="1"/>
+                                    </VisualState.Setters>
+                                </VisualState>
+                                <VisualState x:Name="Pressed">
+                                    <VisualState.Setters>
+                                        <Setter Property="Scale" Value="0.95"/>
+                                    </VisualState.Setters>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                    </Button>
                 </StackLayout>
                 
                 <StackLayout Orientation="Horizontal" VerticalOptions="Center" HorizontalOptions="Center" Margin="0,-35,0,0">
